# SwarmUI

./: .gitignore  AGENTIC_IMAGEN_FEATURE.md  AGENTIC_IMAGEN_QUICKSTART.md  AGENTS.md  ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  FEATURE_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TEST_STEPS.md  MOBILE_UI_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PROMPT_IMPORT_IMPLEMENTATION.md  PROMPT_LLM_FEATURES.md  PR_README.md  PR_SUMMARY.md  README.md  README_AGENTIC_IMAGEN.md  TESTING_CHECKLIST.md  TODO.md  UI_MOCKUP.md  UI_MOCKUP_AGENTIC_IMAGEN.md  UI_MOCKUP_PROMPT_LLM.md  UI_UPDATES_VISION.md  vastai-provision.sh
colab/: colab-notebook.ipynb
docs/: Backend_Pause_Implementation_Summary.md  Backend_Pause_Migration_Guide.md  Backend_Pause_On_Outage.md  Backend_Pause_Quick_Reference.md  Backend_Pause_Testing.md  Basic Usage.md  Docker.md  Image Metadata Format.md  Making Extensions.md  Mobile-Stream-Feature.md  Mobile-Stream-Fix-Notes.md  Mobile-Stream-UI-Mockup.md  Mobile_UI_Guide.md  README.md  README_Backend_Pause.md  Sharing Your Swarm.md  Troubleshooting.md  User Settings.md  Using More GPUs.md  Video Model Support.md
docs/APIRoutes/: T2IAPI.md
docs/Features/: LLMPromptRefinement.md  Presets.md  README.md  Webhooks.md
docs/guides/: prompt-import-api-usage.md
languages/: en.json
launchtools/: install-linux.sh  install-windows.bat
src/McpServers/SwarmGenerateTabMcp/: Cargo.toml  README.md
src/McpServers/SwarmGenerateTabMcp/src/: main.rs  mcp.rs  session.rs  swarm_client.rs  tools.rs
(+111 files in other folders)
