[package]
name = "SwarmGenerateTabMcp"
version = "0.1.0"
edition = "2024"
authors = ["SwarmUI Contributors"]
description = "Model Context Protocol server for the SwarmUI Generate Tab"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
